Added new option for databases currently Json/MySql/Sqlite maybe later mongo and redis.